login and register page frontend ready to be implemented

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -33,10 +33,12 @@
     -->
 
   <!--STYLES-->
+  <link rel="stylesheet" href="/styles/adminlte3/adminlte.min.css">
   <link rel="stylesheet" href="/styles/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="/styles/icheck-bootstrap/icheck-bootstrap.min.css">
   <link rel="stylesheet" href="/styles/importer.css">
   <link rel="stylesheet" href="/styles/select2/dist/css/select2.min.css">
-  <link rel="stylesheet" href="/styles/sticky-footer.css">
+  <link rel="stylesheet" href="/styles/sticky-footer/sticky-footer.css">
   <link rel="stylesheet" href="/styles/sweetalert2/dist/sweetalert2.min.css">
   <!--STYLES END-->
   <script src="/js/jquery/dist/jquery.js"></script>
@@ -113,9 +115,14 @@
 
   <!--SCRIPTS-->
   <script src="/dependencies/sails.io.js"></script>
+  <script src="/js/@fortawesome/fontawesome-free/js/all.min.js"></script>
+  <script src="/js/adminlte3/adminlte.min.js"></script>
   <script src="/js/axios/dist/axios.min.js"></script>
+  <script src="/js/bootstrap/bootstrap.bundle.min.js"></script>
   <script src="/js/bootstrap/dist/js/bootstrap.js"></script>
   <script src="/js/jquery/dist/jquery.js"></script>
+  <script src="/js/jquery/jquery.min.js"></script>
+  <script src="/js/jquery/jquery.slim.min.js"></script>
   <script src="/js/select2/dist/js/select2.min.js"></script>
   <script src="/js/sweetalert2/dist/sweetalert2.min.js"></script>
   <!--SCRIPTS END-->
