controllers and routes implemented for use

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -8,7 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="<!-- %= sails.getUrlFor('') % -->">Bookstore<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Bookstore<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/Login">Login</a>
@@ -123,7 +123,8 @@
 
 <footer class="footer">
   <div class="container">
-    <span class="text-muted">&copy; Bookstore App. 2020 All rights reserved. Built for educational purpose.</span>
+    <span class="text-muted"></span>&copy; Bookstore App. 2020 All rights reserved. Built for educational
+    purpose.</span>
   </div>
 </footer>
 
