--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,7 +1,9 @@
 <div class="hold-transition login-page">
   <div class="login-box">
     <div class="login-logo">
-      <a href="<!-- %= sails.getUrlFor('') % -->"><b>Bookstore</b></a>
+      <a href="<%= sails.getUrlFor('Home.index') %>"><img class="navbar-brand" src="/images/books-logo.png"
+          alt="Bookstore" width="60" height="70">
+      </a>
     </div>
     <!-- /.login-logo -->
     <div class="card">
@@ -54,10 +56,10 @@
         <!-- /.social-auth-links -->
 
         <p class="mb-1">
-          <a href="forgot-password.html">I forgot my password</a>
+          <a href="/forgot">I forgot my password</a>
         </p>
         <p class="mb-0">
-          <a href="register.html" class="text-center">Register a new membership</a>
+          <a href="/register" class="text-center">Register a new membership</a>
         </p>
       </div>
       <!-- /.login-card-body -->
