--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -1,7 +1,9 @@
 <div class="hold-transition register-page">
   <div class="register-box">
     <div class="register-logo">
-      <a href="<!-- %= sails.getUrlFor('') % -->"><b>Bookstore</b></a>
+      <a href="<%= sails.getUrlFor('Home.index') %>"><img class="navbar-brand" src="/images/books-logo.png"
+          alt="Bookstore" width="60" height="70">
+      </a>
     </div>
 
     <div class="card">
