--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -28,7 +28,7 @@
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Search Books" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
 </nav>
@@ -56,7 +56,7 @@
         <div class="row">
           <!-- /.col-md-6 -->
           <div class="col-sm-4">
-            <div class="card card-primary card-outline">
+            <div class="card card-warning card-outline">
               <div class="card-header">
                 <h5 class="m-0">Featured Books</h5>
               </div>
@@ -76,7 +76,7 @@
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="card card-primary card-outline">
+            <div class="card card-success card-outline">
               <div class="card-header">
                 <h5 class="m-0">Book Genres</h5>
               </div>
@@ -88,43 +88,59 @@
           <!-- /.col-md-6 -->
         </div>
         <!-- /.row -->
+        <!-- row -->
+        <div class="row d-flex justify-content-center">
+          <div class="col-md-12"><br><br><br></div>
+          <div class="col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <div class="tab-content">
+                  <div class="active tab-pane" id="activity">
+                    <!-- Post -->
+                    <div class="post">
+                      <div class="user-block">
+                        <img class="img-circle img-bordered-sm" src="/images/avatar3.png" alt="user image">
+                        <span class="username">
+                          <a href="#">Jonathan Burke Jr.</a>
+                          <a href="#" class="float-right btn-tool"><i class="fas fa-times"></i></a>
+                        </span>
+                        <span class="description">Shared publicly - 7:30 PM today</span>
+                      </div>
+                      <!-- /.user-block -->
+                      <p>
+                        Lorem ipsum represents a long-held tradition for designers,
+                        typographers and the like. Some people hate it and argue for
+                        its demise, but others ignore the hate as they create awesome
+                        tools to help create filler text for everyone from bacon lovers
+                        to Charlie Sheen fans.
+                      </p>
+
+                    </div>
+                    <!-- /.post -->
+
+                  </div>
+                  <!-- /.tab-pane -->
+                </div>
+                <!-- /.tab-content -->
+              </div><!-- /.card-body -->
+            </div>
+            <!-- /.nav-tabs-custom -->
+          </div>
+          <!-- /.col -->
+        </div>
+        <!-- /.row -->
       </div><!-- /.container-fluid -->
     </div>
     <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
-
-
-
-
-  <div class="container">
-    <!-- Example row of columns -->
-    <div class="my-3 p-3 bg-white rounded shadow-sm">
-      <h6 class="border-bottom border-gray pb-2 mb-0">Recent updates</h6>
-      <div class="media text-muted pt-3">
-        <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg"
-          preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32">
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#007bff" /><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text>
-        </svg>
-        <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
-          <strong class="d-block text-gray-dark">@username</strong>
-          Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-          condimentum nibh, ut fermentum massa justo sit amet risus.
-        </p>
-      </div>
-    </div>
-
-    <hr>
-
-  </div> <!-- /container -->
-
 </main>
 
-<footer class="footer">
-  <div class="container">
-    <span class="text-muted"></span>&copy; Bookstore App. 2020 All rights reserved. Built for educational
-    purpose.</span>
+<footer class="main-footer" style="margin-left: 0; bottom: 0; width: 100%; background-color: #f5f5f5;">
+  <span class="text-muted"></span>&copy; <strong>Bookstore App.</strong> 2020 All rights reserved. Built for
+  educational purpose.</span>
+  <div class="float-right d-none d-sm-inline-block">
+    <b>Version</b> 1.0.5
   </div>
 </footer>
 
