--- a/views/layouts/layout-public.ejs
+++ b/views/layouts/layout-public.ejs
@@ -12,6 +12,8 @@
 
   <!--STYLES-->
   <link rel="stylesheet" href="/styles/adminlte3/adminlte.min.css">
+  <link rel="stylesheet" href="/styles/datatables-bs4/dataTables.bootstrap4.min.css">
+  <link rel="stylesheet" href="/styles/datatables-responsive/responsive.bootstrap4.min.css">
   <link rel="stylesheet" href="/styles/daterangepicker/daterangepicker.css">
   <link rel="stylesheet" href="/styles/icheck-bootstrap/icheck-bootstrap.min.css">
   <link rel="stylesheet" href="/styles/importer.css">
@@ -20,6 +22,7 @@
   <link rel="stylesheet" href="/styles/sweetalert2/dist/sweetalert2.min.css">
   <link rel="stylesheet" href="/styles/tempusdominus-bootstrap-4/tempusdominus-bootstrap-4.min.css">
   <!--STYLES END-->
+  <script src="/js/_1/jquery/dist/jquery.min.js"></script>
 </head>
 
 <body>
@@ -35,6 +38,10 @@
   <script src="/js/_2/@fortawesome/fontawesome-free/js/all.min.js"></script>
   <script src="/js/_2/axios/dist/axios.min.js"></script>
   <script src="/js/_2/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/js/_2/datatables-a/jquery.dataTables.min.js"></script>
+  <script src="/js/_2/datatables-bs4/dataTables.bootstrap4.min.js"></script>
+  <script src="/js/_2/datatables-responsive/dataTables.responsive.min.js"></script>
+  <script src="/js/_2/datatables-responsive/responsive.bootstrap4.min.js"></script>
   <script src="/js/_2/daterangepicker/daterangepicker.js"></script>
   <script src="/js/_2/moment/moment.min.js"></script>
   <script src="/js/_2/sweetalert2/dist/sweetalert2.min.js"></script>
