--- a/views/admin/newBooks.ejs
+++ b/views/admin/newBooks.ejs
@@ -20,19 +20,22 @@
             <div class="col-md-4">
               <div class="form-group">
                 <label for="InputBook">Book</label>
-                <input class="form-control" name="book_name" placeholder="Enter Book's name">
+                <input class="form-control" name="book_name" placeholder="Enter Book's name"
+                  <% if (res.locals.book) { %> value="<%= book.book %>" <% } %>>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class=" col-md-4">
               <div class="form-group">
                 <label for="InputBook">Author</label>
-                <input class="form-control" name="author_name" placeholder="Enter Author's name">
+                <input class="form-control" name="author_name" placeholder="Enter Author's name"
+                  <% if (res.locals.book) { %> value="<%= book.author %>" <% } %>>
               </div>
             </div>
             <div class="col-md-4">
               <div class="form-group">
                 <label for="InputBook">Publisher</label>
-                <input class="form-control" name="publisher_name" placeholder="Enter Publisher's name">
+                <input class="form-control" name="publisher_name" placeholder="Enter Publisher's name"
+                  <% if (res.locals.book) { %> value="<%= book.publisher %>" <% } %>>
               </div>
             </div>
           </div>
@@ -40,19 +43,22 @@
             <div class="col-md-4">
               <div class="form-group">
                 <label for="InputBook">ISBN 10</label>
-                <input class="form-control" name="isbn10" placeholder="Enter ISBN 10">
+                <input class="form-control" name="isbn10" placeholder="Enter ISBN 10" <% if (res.locals.book) { %>
+                  value="<%= book.isbn_10 %>" <% } %>>
               </div>
             </div>
             <div class="col-md-4">
               <div class="form-group">
                 <label for="InputBook">ISBN 13</label>
-                <input class="form-control" name="isbn13" placeholder="Enter ISBN 13">
+                <input class="form-control" name="isbn13" placeholder="Enter ISBN 13" <% if (res.locals.book) { %>
+                  value="<%= book.isbn_13 %>" <% } %>>
               </div>
             </div>
             <div class="col-md-4">
               <div class="form-group">
                 <label for="InputBook">Price</label>
-                <input class="form-control" name="price" placeholder="Enter price of the book">
+                <input class="form-control" name="price" placeholder="Enter price of the book"
+                  <% if (res.locals.book) { %> value="<%= book.price %>" <% } %>>
               </div>
             </div>
           </div>
@@ -60,7 +66,8 @@
             <div class="col-md-4">
               <div class="form-group">
                 <label for="InputBook">Genre</label>
-                <select class="js-example-tokenizer form-control" multiple="multiple" style="width: 100%;" name="genre">
+                <select class="js-example-tokenizer select_genre form-control" multiple="multiple" style="width: 100%;"
+                  name="genre">
                   <option>Fiction</option>
                   <option>Non-Fiction</option>
                   <option>Action</option>
@@ -78,7 +85,8 @@
             <div class="col-md-4">
               <div class="form-group">
                 <label for="InputBook">Type</label>
-                <select class="js-example-tokenizer form-control" multiple="multiple" style="width: 100%;" name="type">
+                <select class="js-example-tokenizer select_type form-control" multiple="multiple" style="width: 100%;"
+                  name="type">
                   <option>Paperback</option>
                   <option>Hardcover</option>
                   <option>Audiobook</option>
@@ -89,7 +97,8 @@
             <div class="col-md-4">
               <div class="form-group">
                 <label for="InputBook">Language</label>
-                <input class="form-control" name="lang" placeholder="Enter Language eg. English / Bengali">
+                <input class="form-control" name="lang" placeholder="Enter Language eg. English / Bengali"
+                  <% if (res.locals.book) { %> value="<%= book.language %>" <% } %>>
               </div>
             </div>
           </div>
@@ -132,10 +141,33 @@
 
 <script>
   $(document).ready(function () {
+    // BOOK DATA FOR UPDATE
+    "<% if (res.locals.book) { %>"
+    var typeString = '<%= book.type%>';
+    var typeArray = typeString.split(',');
+    var genreString = '<%= book.genre%>';
+    var genreArray = genreString.split(',');
+    $.each(typeArray, function (key, value) {
+      $('.select_type')
+        .append($("<option selected></option>")
+          .attr("value", value)
+          .text(value));
+    });
+    $.each(genreArray, function (key, value) {
+      $('.select_genre')
+        .append($("<option selected></option>")
+          .attr("value", value)
+          .text(value));
+    });
+    "<% } %>"
+
+    // MULTIPLE SELETE TOKENIZER
     $('.js-example-tokenizer').select2({
       tags: true,
       tokenSeparators: [',', ' ']
     });
+
+    // INSERT
     $('#submit').click(function () {
       // Send a POST request
       var dataString = {
@@ -161,7 +193,6 @@
             'Inserted 1 Book!',
             'success'
           )
-          // console.log('Successfully Inserted')
         }
       })
     })
