--- a/views/admin/books.ejs
+++ b/views/admin/books.ejs
@@ -95,15 +95,31 @@
     });
     $('.delete').click(function () {
       // console.log($(this).val())
-      $.ajax({
-        method: 'DELETE',
-        url: '/Books/Delete/' + $(this).val(),
-        success: function (result) {
-          Swal.fire(
-            'Successfully',
-            'Deleted the Book!',
-            'success'
-          )
+      Swal.fire({
+        title: 'Are you sure?',
+        text: "You won't be able to revert this!",
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'Yes, delete it!'
+      }).then((result) => {
+        if (result.value) {
+          $.ajax({
+            method: 'DELETE',
+            url: '/Books/Delete/' + $(this).val(),
+            success: function (response) {
+              Swal.fire(
+                'Successfully',
+                'Deleted the Book!',
+                'success'
+              ).then((result) => {
+                if (result.value) {
+                  location.reload()
+                }
+              })
+            }
+          })
         }
       })
     });
