--- a/views/admin/blank.ejs
+++ b/views/admin/blank.ejs
@@ -17,7 +17,7 @@
 
         <!-- **********************************
             *                                 *
-            *       Blank page space          *
+            *       Blank page template       *
             *                                 *
             *********************************** -->
 
