--- a/views/admin/partials/sidebar.ejs
+++ b/views/admin/partials/sidebar.ejs
@@ -76,7 +76,7 @@
               </ul>
               <ul class="nav nav-treeview" style="display: block;">
                 <li class="nav-item">
-                  <a href="#" class="nav-link">
+                  <a href="/Books/Search" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
                     <p>Search Books</p>
                   </a>
