--- a/views/admin/partials/sidebar.ejs
+++ b/views/admin/partials/sidebar.ejs
@@ -42,7 +42,7 @@
               </a>
               <ul class="nav nav-treeview" style="display: block;">
                 <li class="nav-item">
-                  <a href="#" class="nav-link ">
+                  <a href="/profile" class="nav-link ">
                     <!--active-->
                     <i class="far fa-circle nav-icon"></i>
                     <p>Profile</p>
