session helper incorporated

--- a/views/layouts/layout-admin.ejs
+++ b/views/layouts/layout-admin.ejs
@@ -43,7 +43,7 @@
   <script src="/js/_2/datatables-responsive/dataTables.responsive.min.js"></script>
   <script src="/js/_2/datatables-responsive/responsive.bootstrap4.min.js"></script>
   <script src="/js/_2/daterangepicker/daterangepicker.js"></script>
-  <script src="/js/_2/moment/moment.min.js"></script>
+  <script src="/js/_2/moment/min/moment.min.js"></script>
   <script src="/js/_2/sweetalert2/dist/sweetalert2.min.js"></script>
   <script src="/js/_3/adminlte3/adminlte.min.js"></script>
   <script src="/js/_3/overlayScrollbars/jquery.overlayScrollbars.min.js"></script>
