--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -9,12 +9,11 @@
       <a href="/" class="nav-link">Home</a>
     </li>
     <li class="nav-item dropdown d-none d-sm-inline-block">
-      <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-        aria-expanded="false">Do Something</a>
+      <a class="nav-link dropdown-toggle" href="#" id="more" data-toggle="dropdown" aria-haspopup="true"
+        aria-expanded="false">More</a>
       <div class="dropdown-menu" aria-labelledby="dropdown01">
-        <a class="dropdown-item" href="/Books">All Books</a>
-        <a class="dropdown-item" href="#">Update</a>
-        <a class="dropdown-item" href="#">Delete</a>
+        <a class="dropdown-item" href="#">Public Books</a>
+        <a class="dropdown-item" href="#">Request Books</a>
       </div>
     </li>
   </ul>
