--- a/views/admin/partials/sidebar.ejs
+++ b/views/admin/partials/sidebar.ejs
@@ -13,7 +13,7 @@
             <img src="/images/avatar5.png" class="img-circle elevation-2" alt="User Image">
           </div>
           <div class="info">
-            <a href="#" class="d-block">@username</a>
+            <a href="/Profile" class="d-block">@<%= req.session.user.username%></a>
           </div>
         </div>
 
