--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,85 +1,8 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <img class="navbar-brand" src="/images/books-logo.png" alt="Bookstore" width="40" height="50">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-    aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<!-- Header -->
+<% include ./partials/header %>
+<!-- ./Header -->
 
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Bookstore<span class="sr-only">(current)</span></a>
-      </li>
-      <% if (req.session.authenticated) { %>
-      <li class="nav-item">
-        <a class="nav-link" href="/Dashboard">Dashboard</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/Profile">Profile</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/Books">Books</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Inventory</a>
-      </li>
-      <% } else { %>
-      <li class="nav-item">
-        <a class="nav-link" href="/Login">Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/Register">Register</a>
-      </li>
-      <% } %>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="more" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">More</a>
-        <div class="dropdown-menu" aria-labelledby="more">
-          <a class="dropdown-item" href="#">Public Books</a>
-          <a class="dropdown-item" href="#">Request Books</a>
-        </div>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search Books" aria-label="Search">
-      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-
-  <% if (req.session.authenticated) { %>
-  <!-- Right navbar links -->
-  <ul class="navbar-nav ml-auto">
-    <!-- Notifications Dropdown Menu -->
-    <li class="nav-item dropdown">
-      <a class="nav-link" data-toggle="dropdown" href="#">
-        <i class="far fa-bell"></i>
-        <span class="badge badge-warning navbar-badge">15</span>
-      </a>
-      <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-        <span class="dropdown-item dropdown-header">15 Notifications</span>
-        <div class="dropdown-divider"></div>
-        <a href="#" class="dropdown-item">
-          <i class="fas fa-envelope mr-2"></i> 4 new messages
-          <span class="float-right text-muted text-sm">3 mins</span>
-        </a>
-        <div class="dropdown-divider"></div>
-        <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
-      </div>
-    </li>
-    <!-- Logout from system -->
-    <li class="nav-item dropdown">
-      <a class="nav-link" data-toggle="dropdown" href="#">
-        <i class="fa fa-power-off" style="color:red;"></i>
-      </a>
-      <div class="dropdown-menu dropdown-menu-sm dropdown-menu-right">
-        <a href="/logout" class="dropdown-item">Logout</a>
-      </div>
-    </li>
-  </ul>
-  <% } %>
-</nav>
-<!-- /.navbar -->
-
+<!-- Main content -->
 <main role="main">
 
   <!-- Content Wrapper. Contains page content -->
@@ -181,19 +104,8 @@
     <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
+
 </main>
-
-<footer class="main-footer" style="margin-left: 0; bottom: 0; width: 100%; background-color: #f5f5f5;">
-  <span class="text-muted"></span>&copy; <strong>Bookstore App.</strong> 2020 All rights reserved. Built for
-  educational purpose.</span>
-  <div class="float-right d-none d-sm-inline-block">
-    <b>Version</b> 1.0.5
-  </div>
-</footer>
-
-<script>
-  $(function () {
-
-  })
-
-</script>
+<!-- /.content -->
+<!-- /.content-wrapper -->
+<% include ./partials/footer %>
