--- a/views/layouts/layout-public.ejs
+++ b/views/layouts/layout-public.ejs
@@ -12,6 +12,7 @@
 
   <!--STYLES-->
   <link rel="stylesheet" href="/styles/adminlte3/adminlte.min.css">
+  <link rel="stylesheet" href="/styles/custom.css">
   <link rel="stylesheet" href="/styles/datatables-bs4/dataTables.bootstrap4.min.css">
   <link rel="stylesheet" href="/styles/datatables-responsive/responsive.bootstrap4.min.css">
   <link rel="stylesheet" href="/styles/daterangepicker/daterangepicker.css">
