grunt babel error fixed for production mode

--- a/views/layouts/layout-public.ejs
+++ b/views/layouts/layout-public.ejs
@@ -48,8 +48,9 @@
   <script src="/js/_2/sweetalert2/dist/sweetalert2.min.js"></script>
   <script src="/js/_3/adminlte3/adminlte.min.js"></script>
   <script src="/js/_3/overlayScrollbars/jquery.overlayScrollbars.min.js"></script>
-  <script src="/js/_3/select2/dist/js/select2.min.js"></script>
+  <script src="/js/_3/select2/dist/js/select2.full.min.js"></script>
   <script src="/js/_3/tempusdominus-bootstrap-4/tempusdominus-bootstrap-4.min.js"></script>
+  <script src="/js/custom.js"></script>
   <!--SCRIPTS END-->
 </body>
 
