production minifying/mixin error fixed temporary

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -109,3 +109,5 @@
 <!-- /.content -->
 <!-- /.content-wrapper -->
 <% include ./partials/footer %>
+
+<!--% block('localScripts', '<script src="/js/local/fastclick.js"></script>') %-->
