production js error : TypeError: Cannot set property '...' of undefined fixed

--- a/views/layouts/layout-admin.ejs
+++ b/views/layouts/layout-admin.ejs
@@ -42,9 +42,13 @@
   <script src="/js/datatables-bs4/dataTables.bootstrap4.js"></script>
   <script src="/js/datatables-responsive/dataTables.responsive.js"></script>
   <script src="/js/datatables-responsive/responsive.bootstrap4.js"></script>
+  <script src="/js/axios/dist/axios.js"></script>
+  <script src="/js/moment/moment.js"></script>
+  <script src="/js/daterangepicker/daterangepicker.js"></script>
   <script src="/js/select2/dist/js/select2.full.js"></script>
   <script src="/js/sweetalert2/dist/sweetalert2.js"></script>
   <script src="/js/overlayScrollbars/jquery.overlayScrollbars.js"></script>
+  <script src="/js/tempusdominus-bootstrap-4/tempusdominus-bootstrap-4.js"></script>
   <script src="/js/adminlte3/adminlte.js"></script>
   <script src="/js/script.js"></script>
   <!--SCRIPTS END-->
